--- a/netflix_clone/src/Row.css
+++ b/netflix_clone/src/Row.css
@@ -1,14 +1,21 @@
+.row__posts{
+	display:flex;
+	overflow-y: hidden;
+	overflow-x:scroll;
+	padding:20px;
+}
 .row__poster{
+	max-height:200px;
 	width:100%;
 	object-fit:contain;
-	max-height:300px;
+	
 	transition: transform 450ms;
 	margin-right:10px;
 }
 .row__poster:hover{
 	transform: scale(1.08)
 }
-.row__posts{
-	display:flex;
-	overflow-y: hidden
+
+.row__posts::-webkit-scrollbar{
+	display:none;
 }
