--- a/netflix_clone/src/Row.css
+++ b/netflix_clone/src/Row.css
@@ -1,11 +1,17 @@
+.row{
+	margin-left: 15px;
+	color:white;
+}
 .row__posts{
 	display:flex;
 	overflow-y: hidden;
 	overflow-x:scroll;
-	padding:20px;
+	padding-right:20px;
+	padding-top:20px;
+	padding-bottom:20px;
 }
 .row__poster{
-	max-height:200px;
+	max-height:150px;
 	width:100%;
 	object-fit:contain;
 	
@@ -18,4 +24,11 @@
 
 .row__posts::-webkit-scrollbar{
 	display:none;
+}
+
+.row__posterLarge{
+	max-height: 250px;
+}
+.row__posterLarge:hover{
+	transform: scale(1.09)
 }
