--- a/netflix_clone/src/Nav.css
+++ b/netflix_clone/src/Nav.css
@@ -41,3 +41,21 @@
 .nav_avatar{
 	height:36px;
 }
+.left{
+	display:flex;
+	align-items: center
+}
+.parcourir{
+	align-items:center;
+	display: flex;
+	margin-left:33px;
+	padding-bottom:4px;
+}
+.parcourir_text{
+	color:white;
+	font-weight:400;
+	font-size:1rem;
+}
+.parcourir_icon{
+	padding-top: 5px
+}
