--- a/netflix_clone/src/pages/LoginPage.css
+++ b/netflix_clone/src/pages/LoginPage.css
@@ -79,9 +79,10 @@
 	outline-width: 0;
 	height: 31px;
 	width:30%;
+	min-width:330px;
 	border:none;
 	max-width:600px;
-	border-radius: 1px;
+	border-radius: 2px;
 
 }
 .loginPage_start{
@@ -96,6 +97,10 @@
 	max-width: 170px;
 	min-height: 40px;
 	margin:1rem;
+}
+.loginPage_start:hover{
+	background:#f40612;
+	box-shadow:0 1px 0 rgba(0,0,0,.45);
 }
 .loginPage_input{
 	margin:11px;
